# relative-pose

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  test_setup.sh  visualization-config.rviz
install/: local_setup.sh  setup.sh
install/relative_pose_sim/share/ament_index/resource_index/package_run_dependencies/: relative_pose_sim
install/relative_pose_sim/share/ament_index/resource_index/parent_prefix_path/: relative_pose_sim
install/relative_pose_sim/share/relative_pose_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/relative_pose_sim/share/relative_pose_sim/cmake/: relative_pose_simConfig-version.cmake  relative_pose_simConfig.cmake
install/relative_pose_sim/share/relative_pose_sim/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/relative_pose_sim/share/relative_pose_sim/launch/: multi_robot_sim.launch.py  turtlesim_mimic.py
install/relative_pose_sim/share/relative_pose_sim/models/: base_box_wheels.sdf  box_robot.urdf.xacro  follower_robot.sdf  leader_robot.sdf
install/relative_pose_sim/share/relative_pose_sim/worlds/: flat_plane.world
log/: latest_build
models/: base_box_wheels.sdf  box_robot.urdf.xacro  follower_robot.sdf  leader_robot.sdf
relative_pose_sim/: __init__.py
scripts/: data_recorder.py  follower_controller.py  leader_controller.py  run_sim_and_record.sh
sim/: assistant_rules.md  sim.md
sim/launch/: multi_robot_sim.launch.py  turtlesim_mimic.py
worlds/: flat_plane.world
